<?xml version="1.0" encoding="utf-8"?>
<!--This is where the map will display the location.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!--This is the search bar.-->
    <fragment
        android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        />
    <!--This is the map.-->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        />
    <!--This layout displays a list of cameras that captured real life images.-->
    <ListView
        android:id="@+id/lv_camera_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        />
</LinearLayout>

